@startuml
'https://plantuml.com/class-diagram

interface IShape {
    +Point position
    +void move(Point: dp): Move the shape delta distance
    +void draw(TBD)
}

interface IWorld {
    +IShape[] lShapes
    +void add(IShape: shape)
}
class Square {
    -- left bottom vertex --
    +Point p0

    +double alpha: rotation to x axis
}

class Circle {
    -- center vertex --
    +Point p0
}
class Window {
    +IWorld world
    +void draw()
}

class Player {
    -- view coordinates --
    -Point botLeft
    -Point topRight
    +void run()
    -void _addSquare(Point)
    -void _zoomView(double)
    -void _moveView(double)
}

class Point {
    +double x
    +double y
}

Player *-- "1" Window
Player *-- "0..*" Square
Player *-- "0..*" Circle
Window o-- "0..*" IWorld
IWorld o-- "0..*" IShape
World ..|> IWorld
Square ..|> IShape
Circle ..|> IShape
IShape --> Point
IWorld --> Point

'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml